# assemblix-aitools

./: .gitignore
.github/workflows/: publish.yml
mcp/: LICENSE  README.md  pyproject.toml
mcp/src/assemblix_mcp/: __init__.py  client.py  config.py  server.py
mcp/src/assemblix_mcp/resources/: __init__.py
mcp/src/assemblix_mcp/resources/examples/: branching.json  minimal.json
mcp/src/assemblix_mcp/resources/guides/: execution.md
mcp/src/assemblix_mcp/tools/: executions.py  workflows.py
mcp/tests/: test_client_executions.py  test_client_workflows.py  test_config.py  test_execution_tools.py  test_resources.py  test_server.py  test_workflow_tools.py
