[project]
name = "assemblix-mcp"
version = "0.1.0"
description = "MCP server for Assemblix — author, run & inspect workflows over a project API key"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastmcp>=3",
    "httpx>=0.27",
    "pydantic>=2",
]

[project.scripts]
assemblix-mcp = "assemblix_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/assemblix_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"src/assemblix_mcp/resources/examples" = "assemblix_mcp/resources/examples"

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "respx>=0.21"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
