[project]
name = "assemblix-mcp"
version = "0.2.0"
description = "MCP server for Assemblix — author, run & inspect workflows over a project API key"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "nmamizerov", email = "nmamizerov@gmail.com" }]
keywords = ["assemblix", "mcp", "model-context-protocol", "workflows", "llm", "ai-agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastmcp>=3",
    "httpx>=0.27",
    "pydantic>=2",
]

[project.urls]
Homepage = "https://github.com/nmamizerov/assemblix-aitools"
Repository = "https://github.com/nmamizerov/assemblix-aitools"
Issues = "https://github.com/nmamizerov/assemblix-aitools/issues"

[project.scripts]
assemblix-mcp = "assemblix_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/assemblix_mcp"]

[tool.hatch.build.targets.sdist]
exclude = ["uv.lock"]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.23", "respx>=0.21"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
